Wiki Lib Get Random Pages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 authors = ["Isaac Park <isaac.a.park@gmail.com>"]
 
 [dependencies]
-#hyper = "*"
-#rustc-serialize = "*"
+hyper = "*"
+rustc-serialize = "*"
