--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Isaac Park <isaac.a.park@gmail.com>"]
 
 [dependencies]
-hyper = "*"
-rand = "*"
-rustc-serialize = "*"
+#hyper = "*"
+#rand = "*"
+#rustc-serialize = "*"
